# shop

./: .gitignore  main.py  products_views.py  pyproject.toml
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py  user.py
products/: crud.py  schemas.py  views.py
users/: crud.py  schemas.py  views.py
